
  ChangeLog for the eggleton-tools tools repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
   110: AstroFloyd, 22/07/2010
      - listmod: remove much archaic Fortran
    
    99: AstroFloyd, 20/07/2010
      - Update listmod: give the output file the model number as name; allow >999 blocks
    
    98: AstroFloyd, 20/07/2010
      - Change source code to free format, .f90
    
    95: AstroFloyd, 20/07/2010
      - updates in (plt_)functions from plot rev.90-92
      
    88: AstroFloyd, 13/07/2010
      - Updated Makefile
      - small bugfix
    
    86: AstroFloyd, 13/07/2010
      - Most of these changes in functions were done in ../plot/
        - Introduced module kinds
        - Moved routines from functions.f to new file plt_functions.f
      - plt2dat.f: added output for Lennart
    
    63: AstroFloyd, 01/04/2010
      - Removed string length as an argument in findfile(s) and quit_program
      - selplt.f: sorted Reddy&Lambert data
      - functions.f: 
        - get hostname,user,uid from environment
      	- created set_plotpltn_labels(), set_PGPS_title()
    
    59: AstroFloyd, 05/01/2010
      - fixed small bug in findplt: iout undefined when calling w/o command-line options
      
    58: AstroFloyd, 05/01/2010
      - added convert_initdat.f, plt2dat.f
      - findplt: read unformatted, allows reading CVS plt output
    
    56: AstroFloyd, 17/11/2009
      - updated/changed NRF functions to put online
      - added copyright labels
      - made compatible with gfortran-4.4
      - updated Makefiles
    
    53: AstroFloyd, 27/10/2009
     - made code compatible with gfortran and ifort v.11
     - listmod: more screen output
     - updated doc/Makefile
         
    50: AstroFloyd, 01/07/2009
     - ~/bin/lib/ -> ~/usr/lib/
    
    33: AstroFloyd, 09/03/2009
     - listmod and mergeplt should now be able to handle v.2005 output
     
    26: AstroFloyd, 25/02/2009